@@ -1,3 +1,7 @@
+2016-01-03  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* LICENSE.txt: Updated copyright year.
+
 2015-11-28  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* sample/Mandelbrot/mandelbrot_per4.rb, mandelbrot_per4.cl: Added.
